Fixed overflowing input content when text-label is present

--- a/app/client/stylesheets/components/pu-input.sass
+++ b/app/client/stylesheets/components/pu-input.sass
@@ -90,3 +90,6 @@
                 z-index: 1
                 color: $color-text
                 margin-top: -8px
+
+            .pu-input
+                padding-right: 65px
